# vim_rust

./: .gitignore  AGENTS.md  Cargo.toml  Filelist  Makefile  README.md  build.rs  configure  text.txt  uninstall.txt
.cargo/: config.toml
.github/: labeler.yml
READMEdir/: README_extra.txt
c_src/: add.c
ci/: hlgroups.make
docs/: autocmd_api.md  c_global_variables.txt  global_state.md  gui_backends.md  list_dict_api.md  rust_port_overview.md  setjmp_longjmp_usage.txt  template-codex-notes.md  template-decision-record.md  template-todo.md
nsis/: gvim.nsi
runtime/: gvimrc_example.vim  vimrc_example.vim
rust_alloc/: Cargo.toml
rust_arabic/: Cargo.toml
rust_arglist/: Cargo.toml
rust_autocmd/: Cargo.toml
rust_beval/: Cargo.toml
rust_blob/: Cargo.toml
rust_blowfish/: Cargo.toml
rust_buffer/: Cargo.toml
rust_bufwrite/: Cargo.toml
rust_change/: Cargo.toml  build.rs
rust_channel/: Cargo.toml
rust_charset/: Cargo.toml  README.md
rust_cindent/: Cargo.toml
rust_clientserver/: Cargo.toml
rust_clientserver/include/: rust_clientserver.h
rust_clientserver/src/: lib.rs
rust_clipboard/: Cargo.toml
rust_clipboard/src/: lib.rs
rust_clipboard_platform/: Cargo.toml
rust_clipboard_platform/src/: lib.rs
rust_cmdexpand/: Cargo.toml
rust_cmdhist/: Cargo.toml
rust_cmdline/: Cargo.toml
rust_core/: Cargo.toml
rust_create_nvcmdidxs/: Cargo.toml  build.rs
rust_crypt/: Cargo.toml
rust_crypto/: Cargo.toml
rust_crypto_zip/: Cargo.toml
rust_cscope/: Cargo.toml
rust_debugger/: Cargo.toml
rust_dict/: Cargo.toml
rust_diff/: Cargo.toml
rust_digraph/: Cargo.toml
rust_drawline/: Cargo.toml
rust_drawscreen/: Cargo.toml
rust_drawscreen/src/: lib.rs
rust_edit/: Cargo.toml  build.rs
rust_editor/: Cargo.toml
rust_entry/: Cargo.toml
rust_eval/: Cargo.toml
rust_evalbuffer/: Cargo.toml
rust_evalfunc/: Cargo.toml
rust_evalfunc_stubs/: Cargo.toml
rust_evalvars/: Cargo.toml
rust_evalwindow/: Cargo.toml
rust_ex_eval/: Cargo.toml
rust_ex_getln/: Cargo.toml
rust_excmd/: Cargo.toml
rust_excmds/: Cargo.toml
rust_exeval/: Cargo.toml
rust_ffi/: Cargo.toml
rust_fileio/: Cargo.toml
rust_filepath/: Cargo.toml
rust_findfile/: Cargo.toml
rust_float/: Cargo.toml
rust_fold/: Cargo.toml
rust_fuzzy/: Cargo.toml
rust_gc/: Cargo.toml
rust_getchar/: Cargo.toml
rust_gui/: Cargo.toml  build.rs
rust_gui/src/: lib.rs
rust_gui_core/: Cargo.toml
rust_gui_gtk/: Cargo.toml
rust_gui_gtk_f/: Cargo.toml
rust_gui_gtk_x11/: Cargo.toml
rust_gui_haiku/: Cargo.toml
rust_gui_motif/: Cargo.toml
rust_gui_photon/: Cargo.toml
rust_gui_w32/: Cargo.toml
rust_gui_winit/: Cargo.toml
rust_gui_winit/src/: lib.rs
rust_gui_x11/: Cargo.toml
rust_gui_xim/: Cargo.toml  build.rs
rust_gui_xpm/: Cargo.toml
rust_gvimext/: Cargo.toml
rust_gvimext/src/: lib.rs  win.rs
rust_hardcopy/: Cargo.toml  build.rs
rust_hardcopy/src/: c_printer.c  c_printer.h  lib.rs  main.rs
rust_hashtab/: Cargo.toml
rust_help/: Cargo.toml
rust_highlight/: Cargo.toml
rust_if_lua/: Cargo.toml
rust_if_mzsch/: Cargo.toml
rust_if_python/: Cargo.toml
rust_if_ruby/: Cargo.toml
rust_if_tcl/: Cargo.toml
rust_indent/: Cargo.toml
rust_input/: Cargo.toml
rust_insexpand/: Cargo.toml
rust_installer/: Cargo.toml
rust_iscygpty/: Cargo.toml
rust_job/: Cargo.toml
rust_job/src/: lib.rs
rust_libvterm/: Cargo.toml
rust_linematch/: Cargo.toml
rust_list/: Cargo.toml
rust_locale/: Cargo.toml
rust_log/: Cargo.toml
rust_lua/: Cargo.toml
rust_main/: Cargo.toml
rust_map/: Cargo.toml
rust_mark/: Cargo.toml
rust_match/: Cargo.toml
rust_mbyte/: Cargo.toml
rust_memfile/: Cargo.toml
rust_memline/: Cargo.toml
rust_menu/: Cargo.toml
rust_message/: Cargo.toml
rust_misc/: Cargo.toml
rust_misc1/: Cargo.toml
rust_misc2/: Cargo.toml
rust_mouse/: Cargo.toml
rust_move/: Cargo.toml
rust_mzsch/: Cargo.toml
rust_nbdebug/: Cargo.toml
rust_netbeans/: Cargo.toml
rust_normal/: Cargo.toml
rust_ole/: Cargo.toml
rust_ops/: Cargo.toml
rust_option/: Cargo.toml  build.rs
rust_optionstr/: Cargo.toml
rust_os_amiga/: Cargo.toml
rust_os_api/: Cargo.toml
rust_os_mac_conv/: Cargo.toml
rust_os_mswin/: Cargo.toml
rust_os_qnx/: Cargo.toml
rust_os_unix/: Cargo.toml
rust_os_vms/: Cargo.toml
rust_os_w32dll/: Cargo.toml
rust_os_w32exe/: Cargo.toml
rust_os_win32/: Cargo.toml
rust_path/: Cargo.toml
rust_perl/: Cargo.toml
rust_pixmaps/: Cargo.toml
rust_popupmenu/: Cargo.toml
rust_popupwin/: Cargo.toml
rust_profiler/: Cargo.toml
rust_pty/: Cargo.toml
rust_python/: Cargo.toml
rust_quickfix/: Cargo.toml
rust_regex/: Cargo.toml
rust_regex_bt/: Cargo.toml
rust_regex_engine/: Cargo.toml  Makefile  regex_config.toml
rust_regex_engine/benches/: engine.rs
rust_regex_engine/include/: rust_regex_engine.h
rust_regex_engine/src/: backtrack.rs  class.rs  lib.rs  nfa.rs
rust_regex_engine/tests/: compat.rs
rust_regexp/: Cargo.toml
rust_register/: Cargo.toml
rust_ruby/: Cargo.toml
rust_screen/: Cargo.toml
rust_scriptfile/: Cargo.toml
rust_search/: Cargo.toml
rust_session/: Cargo.toml
rust_sha256/: Cargo.toml
rust_sign/: Cargo.toml
rust_sound/: Cargo.toml
rust_sound/src/: lib.rs
rust_spell/: Cargo.toml
rust_spellfile/: Cargo.toml
rust_spellsuggest/: Cargo.toml
rust_strings/: Cargo.toml
rust_syntax/: Cargo.toml
rust_tag/: Cargo.toml
rust_tcl/: Cargo.toml
rust_term/: Cargo.toml
rust_termcontrol/: Cargo.toml
rust_terminal/: Cargo.toml
rust_termlib/: Cargo.toml
rust_testing/: Cargo.toml
rust_testsupport/: Cargo.toml
rust_text/: Cargo.toml
rust_textformat/: Cargo.toml
rust_textobject/: Cargo.toml
rust_textprop/: Cargo.toml
rust_time/: Cargo.toml
rust_tuple/: Cargo.toml
rust_typval/: Cargo.toml
rust_ui/: Cargo.toml
rust_undo/: Cargo.toml
rust_usercmd/: Cargo.toml
rust_userfunc/: Cargo.toml
rust_version/: Cargo.toml  build.rs
src/: Makefile  (+200 more)
src/GvimExt/rust_gvimext_win/: Cargo.toml  build.rs
src/GvimExt/rust_gvimext_win/src/: lib.rs
(+493 files in other folders)
