[package]
name = "vim_channel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "time", "macros", "io-util", "rt"] }
rust_spell = { path = "rust_spell" }
diff = { path = "rust/diff" }
rust_buffer = { path = "rust_buffer" }
rust_python = { path = "rust_python" }
rust_profiler = { path = "rust_profiler" }
rust_debugger = { path = "rust_debugger" }
rust_pty = { path = "rust_pty" }
rust_wayland = { path = "rust_wayland" }
rust_change = { path = "rust_change" }
rust_excmd = { path = "rust_excmd" }
rust_lua = { path = "rust_lua", optional = true }
rust_ruby = { path = "rust_ruby", optional = true }
rust_perl = { path = "rust_perl", optional = true }
rust_tcl = { path = "rust_tcl", optional = true }
rust_mzsch = { path = "rust_mzsch", optional = true }
rust_xcmdsrv = { path = "rust_xcmdsrv", optional = true }
rust_ole = { path = "rust_ole", optional = true }
rust_alloc = { path = "rust_alloc" }

[features]
default = []
lua = ["rust_lua"]
ruby = ["rust_ruby"]
perl = ["rust_perl"]
tcl = ["rust_tcl"]
mzsch = ["rust_mzsch"]
xcmdsrv = ["rust_xcmdsrv"]
ole = ["rust_ole"]

[target.'cfg(target_os = "windows")'.dependencies]
rust_os_mswin = { path = "rust_os_mswin" }

[target.'cfg(target_os = "amiga")'.dependencies]
rust_os_amiga = { path = "rust_os_amiga" }

[target.'cfg(target_os = "vms")'.dependencies]
rust_os_vms = { path = "rust_os_vms" }

[target.'cfg(target_os = "qnx")'.dependencies]
rust_os_qnx = { path = "rust_os_qnx" }

[lib]
name = "vim_channel"
path = "src/channel.rs"
