[workspace]
members = ["rust_*", "rust/*"]
exclude = [
    "rust_lua",
    "rust_ruby",
    "rust_perl",
    "rust_tcl",
    "rust_mzsch",
    "rust_ole",
    "rust_cscope",
    "rust/terminal",
    "rust_alloc",
    "rust_excmd",
    "rust_clipboard",
    "rust_float",
    "rust_blowfish",
]

[package]
name = "vim_channel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "time", "macros", "io-util", "rt"] }
rust_spell = { path = "rust_spell" }
diff = { path = "rust/diff" }
rust_buffer = { path = "rust_buffer" }
rust_python = { path = "rust_python" }
rust_profiler = { path = "rust_profiler" }
rust_job = { path = "rust_job" }
rust_debugger = { path = "rust_debugger" }
rust_pty = { path = "rust_pty" }
rust_change = { path = "rust_change" }
rust_excmds = { path = "rust_excmds" }
rust_cmdhist = { path = "rust_cmdhist" }
rust_alloc = { path = "rust_alloc" }
rust_message = { path = "rust_message" }
rust_blob = { path = "rust_blob" }
rust_sha256 = { path = "rust_sha256" }
rust_bufwrite = { path = "rust_bufwrite" }
regex = "1"
blowfish = "0.8"
pbkdf2 = "0.12"
ring = "0.17"

[features]
default = []

[target.'cfg(windows)'.dependencies]
rust_os_win32 = { path = "rust_os_win32" }

[target.'cfg(unix)'.dependencies]
rust_os_unix = { path = "rust_os_unix" }

[target.'cfg(target_os = "amiga")'.dependencies]
rust_os_amiga = { path = "rust_os_amiga" }

[target.'cfg(target_os = "qnx")'.dependencies]
rust_os_qnx = { path = "rust_os_qnx" }

[target.'cfg(target_os = "linux")'.dependencies]
rust_wayland = { path = "rust_wayland" }

[lib]
name = "vim_channel"
path = "src/channel.rs"

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
