[package]
name = "rust_clientserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "rust_clientserver"
crate-type = ["staticlib", "rlib"]
