[package]
name = "rust_drawscreen"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
rust_gui_core = { path = "../rust_gui_core" }
rust_gui_x11 = { path = "../rust_gui_x11", optional = true }
rust_gui_w32 = { path = "../rust_gui_w32", optional = true }
rust_screen = { path = "../rust_screen" }

[features]
# Select which backend implementation to use.  Windows is the default so
# that tests run on platforms without an X server.
default = ["w32"]
x11 = ["rust_gui_x11"]
w32 = ["rust_gui_w32"]

[lib]
name = "rust_drawscreen"
crate-type = ["staticlib", "rlib"]
