[package]
name = "rust_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_gui_core = { path = "../rust_gui_core" }

[lib]
name = "rust_gui"
crate-type = ["staticlib", "rlib"]

[features]
default = ["x11"]
x11 = ["rust_gui_x11"]
gtk = ["rust_gui_gtk"]
w32 = ["rust_gui_w32"]
motif = ["rust_gui_motif"]

[target.'cfg(target_os = "linux")'.dependencies]
rust_gui_x11 = { path = "../rust_gui_x11", optional = true }
rust_gui_gtk = { path = "../rust_gui_gtk", optional = true }
rust_gui_motif = { path = "../rust_gui_motif", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
rust_gui_w32 = { path = "../rust_gui_w32", optional = true }
