[package]
name = "rust_gvimext"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["implement","Win32_Foundation","Win32_System_Com","Win32_UI_Shell","Win32_System_Registry","Win32_UI_WindowsAndMessaging","Win32_System_Threading","Win32_System_Environment","Win32_System_LibraryLoader","Win32_System_Memory","Win32_System_Ole"] }

[lib]
name = "gvimext"
crate-type = ["cdylib"]
