[package]
name = "rust_job"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[lib]
name = "rust_job"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]
