[package]
name = "rust_regex_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_regex_engine"
crate-type = ["staticlib", "rlib"]

# This crate implements a very small regular expression engine that
# supports only literal matches and a few meta characters.  Therefore we
# do not depend on an external regex crate.
[dependencies]
