[package]
name = "rust_regex_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_regex_engine"
crate-type = ["staticlib", "rlib"]

[dependencies]
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "engine"
harness = false
